--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,14 @@
 services:
   - type: web
-    name: ai-travel-assistant
+    name: ai-travel-assistant-api
     env: python
+    region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: gunicorn main:app --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     envVars:
+      - key: DATABASE_URL
+        value: postgresql://neondb_owner:npg_123abc@ep-cool-breeze-123456.us-east-2.aws.neon.tech/neondb
       - key: PYTHON_VERSION
         value: 3.11.0
+    healthCheckPath: /health
+    autoDeploy: true
