--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,10 @@ pytz==2023.3
 gunicorn==20.1.0
 python-multipart==0.0.6
 pydantic-settings==2.1.0
+
+# Production Database (Render provides this automatically)
+DATABASE_URL=postgresql://...
+
+# App Settings
+SECRET_KEY=your-production-secret-key-change-this
+DEBUG=False
