--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,13 @@
-# Core
+
+# Python Dependencies ONLY
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-
-# Database
+python-dotenv==1.0.0
 sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9  # or asyncpg for async
-sqlite3
-
-# AI/ML
-openai==1.3.0
-langchain==0.0.340
-pydantic==2.5.0
-
-# Authentication
+psycopg2-binary==2.9.9
+pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-
-# Email
-jinja2==3.1.2
-emails==0.6
-
-# External APIs
-aiohttp==3.9.1
-requests==2.31.0
-
-# Monitoring & Metrics
-psutil==5.9.6
-prometheus-client==0.19.0
-
-# Utilities
-python-dotenv==1.0.0
-pytz==2023.3
-
-
-# Production dependencies
-gunicorn==20.1.0
-python-multipart==0.0.6
-pydantic-settings==2.1.0
-
-# Production Database (Render provides this automatically)
-DATABASE_URL=postgresql://...
-
-# App Settings
-SECRET_KEY=your-production-secret-key-change-this
-DEBUG=False
+httpx==0.25.1git add requirements.txt
