--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,9 @@ pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-httpx==0.25.1git add requirements.txt
+httpx==0.25.1
+email-validator==1.3.1
+PyJWT==2.8.0
+requests==2.31.0
+celery==5.3.0
+streamlit==1.28.0
